Routes documentation and some fix i the regionDownloader controller
