# api/docs/openapi.json
@@ -1,135 +1,401 @@
 {
-  "openapi" : "3.0.0",
-  "info" : {
-    "title" : "VLibras Translator API",
-    "description" : "VLibras Translator is an open source API developed for automatic translation from Brazillian Portuguese to Brazilian Sign Language (LIBRAS)",
-    "contact" : {
-      "email" : "vlibras@lavid.ufpb.br"
+  "openapi": "3.0.0",
+  "servers": [
+    {
+      "description": "VLibras Dictionary Brazilian Government Server",
+      "url": "http://dicionario.vlibras.gov.br"
     },
-    "license" : {
-      "name" : "GNU Lesser General Public License v3.0",
-      "url" : "https://www.gnu.org/licenses/lgpl-3.0.html"
+    {
+      "description": "VLibras Dictionary Localhost server",
+      "url": "http://localhost:3001"
+    }
+  ],
+  "info": {
+    "description": "VLibras Dictionary is an open source API developed for the distribution of VLibras animation files",
+    "version": "1.0.0",
+    "title": "VLibras Dictionary API",
+    "contact": {
+      "email": "vlibras@lavid.ufpb.br"
     },
-    "version" : "2.0.0"
+    "license": {
+      "name": "GNU Lesser General Public License v3.0",
+      "url": "https://www.gnu.org/licenses/lgpl-3.0.html"
+    }
   },
-  "servers" : [ {
-    "url" : "http://traducao.vlibras.gov.br",
-    "description" : "VLibras Translator Brazilian Government Server"
-  }, {
-    "url" : "http://localhost:3000",
-    "description" : "VLibras Translator Localhost Server"
-  } ],
-  "tags" : [ {
-    "name" : "translations",
-    "description" : "Automatic translation from Brazillian Portuguese to LIBRAS"
-  }, {
-    "name" : "reviews",
-    "description" : "Human revision of VLibras Translator translations"
-  } ],
-  "paths" : {
-    "/translate" : {
-      "post" : {
-        "tags" : [ "translations" ],
-        "summary" : "Translates a text to text",
-        "description" : "Translates a text written in Brazillian Portuguese to an equivalent text in LIBRAS",
-        "operationId" : "translateText",
-        "requestBody" : {
-          "description" : "Text to translate",
-          "content" : {
-            "application/json" : {
-              "schema" : {
-                "$ref" : "#/components/schemas/Translate"
-              }
+  "tags": [
+    {
+      "name": "signs",
+      "description": "Download animation files"
+    }
+  ],
+  "paths": {
+    "/{version}/{platform}/{sign}": {
+      "get": {
+        "tags": [
+          "signs"
+        ],
+        "summary": "Download an animation file",
+        "operationId": "downloadNationalSign",
+        "description": "Download an animation file from the national repository",
+        "parameters": [
+          {
+            "name": "version",
+            "in": "path",
+            "description": "Animations player version",
+            "required": true,
+            "schema": {
+              "$ref": "#/components/schemas/Version"
             }
           },
-          "required" : true
-        },
-        "responses" : {
-          "200" : {
-            "description" : "Translated",
-            "content" : {
-              "text/plain" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/TranslatedText"
+          {
+            "name": "platform",
+            "in": "path",
+            "description": "Animations player platform",
+            "required": true,
+            "schema": {
+              "$ref": "#/components/schemas/Platform"
+            }
+          },
+          {
+            "name": "sign",
+            "in": "path",
+            "description": "Animation name",
+            "required": true,
+            "schema": {
+              "$ref": "#/components/schemas/Sign"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Animation file downloaded",
+            "content": {
+              "application/octet-stream": {
+                "schema": {
+                  "$ref": "#/components/schemas/File"
                 }
               }
             }
           },
-          "422" : {
-            "description" : "Invalid value for text param"
+          "404": {
+            "description": "Animation file not found"
           },
-          "500" : {
-            "description" : "Translation core unavailable"
+          "422": {
+            "description": "Invalid value for version|platform param"
+          },
+          "500": {
+            "description": "Internal server error"
           }
         }
       }
     },
-    "/review" : {
-      "post" : {
-        "tags" : [ "reviews" ],
-        "summary" : "Submits a review of translated text",
-        "description" : "Submits a review of the text translated by the VLibras Translation Service",
-        "operationId" : "reviewTranslation",
-        "requestBody" : {
-          "description" : "Review of the translated text",
-          "content" : {
-            "application/json" : {
-              "schema" : {
-                "$ref" : "#/components/schemas/Review"
+    "/{version}/{platform}/{region}/{sign}": {
+      "get": {
+        "tags": [
+          "signs"
+        ],
+        "summary": "Download an animation file",
+        "operationId": "downloadRegionalSign",
+        "description": "Download an animation file from a specific regional repository",
+        "parameters": [
+          {
+            "name": "version",
+            "in": "path",
+            "description": "Animations player version",
+            "required": true,
+            "schema": {
+              "$ref": "#/components/schemas/Version"
+            }
+          },
+          {
+            "name": "platform",
+            "in": "path",
+            "description": "Animations player platform",
+            "required": true,
+            "schema": {
+              "$ref": "#/components/schemas/Platform"
+            }
+          },
+          {
+            "name": "region",
+            "in": "path",
+            "description": "Animation region",
+            "required": true,
+            "schema": {
+              "$ref": "#/components/schemas/Region"
+            }
+          },
+          {
+            "name": "sign",
+            "in": "path",
+            "description": "Animation name",
+            "required": true,
+            "schema": {
+              "$ref": "#/components/schemas/Sign"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Animation file downloaded",
+            "content": {
+              "application/octet-stream": {
+                "schema": {
+                  "$ref": "#/components/schemas/File"
+                }
               }
             }
           },
-          "required" : true
-        },
-        "responses" : {
-          "200" : {
-            "description" : "Successful submission"
+          "404": {
+            "description": "Animation file not found"
           },
-          "422" : {
-            "description" : "Unprocessable entity"
+          "422": {
+            "description": "Invalid value for version|platform|region param"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
+    "/signs": {
+      "get": {
+        "tags": [
+          "signs"
+        ],
+        "summary": "Get a list of all animations in the dictionary",
+        "operationId": "getSignsList",
+        "description": "Get a encoded list of all animations in the dictionary repository",
+        "responses": {
+          "200": {
+            "description": "Animations list retrieved",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/SignsList"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal server error"
           }
         }
       }
     }
   },
-  "components" : {
-    "schemas" : {
-      "Translate" : {
-        "required" : [ "text" ],
-        "type" : "object",
-        "properties" : {
-          "text" : {
-            "type" : "string",
-            "example" : "o rato roeu a roupa do rei de roma"
-          }
+  "components": {
+    "schemas": {
+      "Version": {
+        "type": "string",
+        "pattern": "^\\d{1}.\\d{1}.\\d{1}$",
+        "enum": [
+          "3.3.1"
+        ]
+      },
+      "Platform": {
+        "type": "string",
+        "enum": [
+          "ANDROID",
+          "IOS",
+          "STANDALONE",
+          "WEBGL"
+        ]
+      },
+      "Region": {
+        "type": "string",
+        "enum": [
+          "AC",
+          "AL",
+          "AP",
+          "AM",
+          "BA",
+          "CE",
+          "DF",
+          "ES",
+          "GO",
+          "MA",
+          "MT",
+          "MS",
+          "MG",
+          "PA",
+          "PB",
+          "PR",
+          "PE",
+          "PI",
+          "RJ",
+          "RN",
+          "RS",
+          "RO",
+          "RR",
+          "SC",
+          "SP",
+          "SE",
+          "TO"
+        ]
+      },
+      "Sign": {
+        "type": "string",
+        "example": "CASA"
+      },
+      "SignsList": {
+        "type": "string",
+        "format": "json",
+        "example": {
+          "keys": {
+            "0": 6,
+            "1": 7,
+            "2": 8,
+            "3": 9,
+            "4": 10,
+            "5": 11,
+            "6": 12,
+            "7": 13,
+            "8": 14,
+            "9": 15,
+            "Ê": 27,
+            "É": 26,
+            "Í": 32,
+            "Ã": 19,
+            "Â": 18,
+            "Á": 17,
+            "À": 20,
+            "Ç": 23,
+            "Ú": 48,
+            "Ó": 39,
+            "Õ": 41,
+            "Ô": 40,
+            "%": 4,
+            "$": 1,
+            "'": 0,
+            "-": 5,
+            ",": 2,
+            "A": 16,
+            "C": 22,
+            "B": 21,
+            "E": 25,
+            "D": 24,
+            "G": 29,
+            "F": 28,
+            "I": 31,
+            "H": 30,
+            "K": 34,
+            "J": 33,
+            "M": 36,
+            "L": 35,
+            "O": 38,
+            "N": 37,
+            "Q": 43,
+            "P": 42,
+            "S": 45,
+            "R": 44,
+            "U": 47,
+            "T": 46,
+            "W": 50,
+            "V": 49,
+            "Y": 52,
+            "X": 51,
+            "Z": 53,
+            "_": 3
+          },
+          "trie": {
+            "keys": [
+              22
+            ],
+            "end": false,
+            "children": {
+              "22": {
+                "keys": [
+                  16
+                ],
+                "end": false,
+                "children": {
+                  "16": {
+                    "keys": [
+                      45
+                    ],
+                    "end": false,
+                    "children": {
+                      "45": {
+                        "keys": [
+                          16
+                        ],
+                        "end": false,
+                        "children": {
+                          "16": {
+                            "keys": [],
+                            "end": true,
+                            "children": {}
+                          }
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "characters": [
+            "'",
+            "$",
+            ",",
+            "_",
+            "%",
+            "-",
+            "0",
+            "1",
+            "2",
+            "3",
+            "4",
+            "5",
+            "6",
+            "7",
+            "8",
+            "9",
+            "A",
+            "Á",
+            "Â",
+            "Ã",
+            "À",
+            "B",
+            "C",
+            "Ç",
+            "D",
+            "E",
+            "É",
+            "Ê",
+            "F",
+            "G",
+            "H",
+            "I",
+            "Í",
+            "J",
+            "K",
+            "L",
+            "M",
+            "N",
+            "O",
+            "Ó",
+            "Ô",
+            "Õ",
+            "P",
+            "Q",
+            "R",
+            "S",
+            "T",
+            "U",
+            "Ú",
+            "V",
+            "W",
+            "X",
+            "Y",
+            "Z"
+          ]
         }
       },
-      "TranslatedText" : {
-        "type" : "string",
-        "example" : "RATO ROER PASSADO ROUPA REI ROMA"
-      },
-      "Review" : {
-        "required" : [ "rating", "text", "translation" ],
-        "type" : "object",
-        "properties" : {
-          "text" : {
-            "type" : "string",
-            "example" : "o rato roeu a roupa do rei de roma"
-          },
-          "translation" : {
-            "type" : "string",
-            "example" : "RATO ROER PASSADO ROUPA REI ROMA"
-          },
-          "rating" : {
-            "type" : "string",
-            "example" : "bad",
-            "enum" : [ "good", "bad" ]
-          },
-          "review" : {
-            "type" : "string",
-            "example" : "RATO ROER ROUPA REI ROMA"
-          }
-        }
+      "File": {
+        "type": "string",
+        "format": "binary"
       }
     }
   }
